# gosh-proposer

./: .env  .gitignore  Cargo.toml  Makefile  README.md  example.env  test.env
.github/workflows/: prerelease.yaml
common/: Cargo.toml
common/src/: lib.rs
common/src/checker/: mod.rs
common/src/elock/: deposit.rs  mod.rs  transfer.rs
common/src/eth/: block.rs  call.rs  encoder.rs  events.rs  helper.rs  mod.rs  transfer.rs
common/src/gosh/: balance.rs  block.rs  burn.rs  call.rs  helper.rs  message.rs  mod.rs
common/src/helper/: abi.rs  mod.rs
common/src/token_root/: eth.rs  gosh.rs  mod.rs
contracts/: RootTokenContract.abi  RootTokenContract.cpp  RootTokenContract.hpp  RootTokenContract.tvc  TONTokenWallet.cpp  TONTokenWallet.hpp  checker.abi.json  checker.code  checker.sol  checker.tvc  checkerLib.sol  proposal.abi.json  proposal.code  proposal.sol  proposal.tvc
contracts/l1/lib/forge-std/: foundry.toml
contracts/l1/src/: Elock.sol
contracts/l1/test/: Elock.t.sol  Freezable.t.sol
contracts/l2/: RootTokenContract.abi  RootTokenContract.cpp  RootTokenContract.hpp  RootTokenContract.tvc  TONTokenWallet.abi  TONTokenWallet.cpp  TONTokenWallet.hashes  TONTokenWallet.hpp  TONTokenWallet.tvc  checker.abi.json  checker.code  checker.sol  checker.tvc  checkerLib.sol  compile.sh  indexwallet.code  indexwallet.debug.json  proposal.abi.json  proposal.code  proposal.debug.json  proposal.sol  proposal.tvc  proposal_test.abi.json  proposal_test.code  proposal_test.debug.json  proposal_test.sol  proposal_test.tvc  receiver.abi.json  receiver.code  receiver.debug.json  receiver.sol  receiver.tvc
deposit-proposal-checker/: Cargo.toml  README.md
deposit-proposal-checker/src/: main.rs
deposit-proposal-checker/src/deposit/: mod.rs  proposal.rs  validate.rs
deposit-proposal-checker/src/eth/: validate.rs
deposit-proposal-checker/src/gosh/: proposal.rs
deposit-proposal-checker/src/proposal_checker/: mod.rs
gosh-proposer/: Cargo.toml  README.md  clippy.toml
gosh-proposer/src/: main.rs
gosh-proposer/src/proposer/: mod.rs  propose.rs
l2-proposal-checker/: Cargo.toml
l2-proposal-checker/src/: main.rs
l2-proposal-checker/src/eth/: validate.rs
l2-proposal-checker/src/gosh/: mod.rs
l2-proposal-checker/src/proposal_checker/: mod.rs
l2-telemetry/: Cargo.toml
l2-telemetry/src/: main.rs  telemetry.rs
proposal-checker/: Cargo.toml
proposal-checker/src/: main.rs
proposal-checker/src/l1/: mod.rs
proposal-checker/src/l2/: mod.rs
resources/: elock.abi.json  elock_full_abi.json  erc20.abi.json  events.json  gosh_contract.abi.json  identifiers.json
src/: main.rs
src/eth/: block.rs  encoder.rs  helper.rs  mod.rs  proof.rs  transfer.rs
src/gosh/: helper.rs  mod.rs
src/helper/: tracing.rs
src/proposer/: checker.rs  mod.rs  propose.rs
tests/: call_getter.sh  deposit_test.sh  devgiver9.json  env.deposit  gosh-cli.conf.json  keys.json  make_trans_to_eth.sh  proposal.sh  root.keys.json  root_keys.json  run_test_l2.py  test.sh  test_all.py  test_all.sh  test_change_validators.sh  test_checker.sh  validators_config.txt  wallet.keys.json  withdraw_test.sh  withdrawal_test.sh
tests/solidity/: checker.abi.json  checker.code  checker.sol  checker.tvc
tools/: decode_full_abi.py  l2_telemetry.py  run_deposit_checker_with_validator_keys.py
withdraw-proposal-checker/: Cargo.toml  README.md
withdraw-proposal-checker/src/: main.rs
withdraw-proposal-checker/src/withdraw/: burn.rs  mod.rs  proposal.rs
withdraw_proposal_checker/: Cargo.toml  README.md
withdraw_proposal_checker/src/: main.rs
withdraw_proposal_checker/src/checker/: mod.rs
withdraw_proposal_checker/src/eth/: elock.rs  mod.rs  proposal.rs
withdraw_proposal_checker/src/gosh/: block.rs  burn.rs  mod.rs  monitor.rs
withdraw_proposal_checker/src/proposal/: mod.rs
withdraw_proposal_checker/src/withdraw/: burn.rs  proposal.rs  validator.rs
