[package]
resolver = "2"
name = "gosh_proposer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
incremental = false

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
dotenv = "0.15.0"
rlp = "0.5.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha3 = "0.10.8"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dependencies.web3]
default-features = false
features = ["http-rustls-tls", "ws-tokio", "signing", "ipc-tokio"]
version = "0.19.0"

[dependencies.ton_client]
default-features = false
features = ['std', 'rustls-tls-webpki-roots']
git = 'https://github.com/gosh-sh/ever-sdk.git'
package = 'ton_client'
tag = "1.43.1-rustls"

[dependencies.ton_sdk]
git = 'https://github.com/gosh-sh/ever-sdk.git'
package = 'ton_sdk'
tag = "1.43.1-rustls"
