[workspace]
members = [
    #
    "common",
    "deposit-proposal-checker",
    "gosh-proposer",
    "l2-telemetry",
    "withdraw_proposal_checker",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.75"
dotenv = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = [ "arbitrary_precision" ] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"

[workspace.dependencies.web3]
default-features = false
features = [
    "http-rustls-tls",
    "ipc-tokio",
    "signing",
    "ws-tls-tokio",
    "ws-tokio",
]
version = "0.19.0"

[workspace.dependencies.ton_client]
default-features = false
features = ['rustls-tls-webpki-roots', 'std']
git = 'https://github.com/gosh-sh/ever-sdk.git'
package = 'ton_client'
tag = "1.43.1-rustls"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = false
incremental = false
