[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono = "0.4.31"
dotenv.workspace = true
rlp = "0.5.2"
serde.workspace = true
serde_json.workspace = true
sha3 = "0.10.8"
tokio.workspace = true
ton_client.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
web3.workspace = true

[dependencies.ton_sdk]
git = 'https://github.com/gosh-sh/ever-sdk.git'
package = 'ton_sdk'
tag = "1.43.1-rustls"
