[package]
name = "proposal-checker"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.75"
common = { path = "../common" }
dotenv = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }

[dependencies.web3]
default-features = false
features = ["http-rustls-tls", "ws-tokio", "signing", "ipc-tokio", "ws-tls-tokio"]
version = "0.19.0"

[dependencies.ton_client]
default-features = false
features = ['std', 'rustls-tls-webpki-roots']
git = 'https://github.com/gosh-sh/ever-sdk.git'
package = 'ton_client'
tag = "1.43.1-rustls"

[dependencies.ton_sdk]
git = 'https://github.com/gosh-sh/ever-sdk.git'
package = 'ton_sdk'
tag = "1.43.1-rustls"
