[package]
name = "withdraw_proposal_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
common = { path = "../common" }
dotenv.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
ton_client.workspace = true
tracing.workspace = true
web3.workspace = true